--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ span {
 	color: black;
 	background-color: rgba(256, 256, 256, 0.8);
 	margin: 0% 30%;
-	padding: 20px 40px 80px 40px;
+	padding: 60px 40px 80px 40px;
 	width: auto;
 	min-width: 400px;
 }
@@ -58,6 +58,7 @@ span {
 	width: 100%;
 	background-color: black;
 	overflow: auto;
+	position: fixed;
   }
   
   /* Navbar links */
